# dProfiler

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  QUICK_START.md  README.md  TESTING.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  run_local.py
api/: __init__.py  cli.py  main.py  ml_endpoints.py
core/: __init__.py  database.py  ml_profiler.py  models.py  profiler.py
docs/: k8s-operator-real-world-usage.md
docs/help-guides/: README.md  quick-start.md
docs/help-guides/troubleshooting/: common-issues.md
docs/help-guides/usage/: basic.md  examples.md
dprofiler/: __init__.py  cli.py  ml_cli.py
examples/: ml_profiling_examples.py
k8s/: api.yaml  configmap.yaml  deploy.sh  namespace.yaml  postgres.yaml  redis.yaml  worker.yaml
k8s/crds/: algorithmprofiling.yaml
k8s/examples/: algorithm-profiling-examples.yaml
k8s/kubeflow/: dprofiler-component.py
k8s/operator/: controller.py  deployment.yaml
tests/: __init__.py  test_api.py
workers/: __init__.py  task_queue.py  tasks.py  worker.py
